guestbook/redis-follower.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-follower
  namespace: default
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
    tier: slave  # adjust matching selector labels from your redis-slave.yaml
