guestbook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
  namespace: default
  labels:
    app: guestbook-ui
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: guestbook-ui
